--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
   "name": "laracord/laracord",
   "type": "project",
   "description": "Create Discord bots harnessing the full power of Laravel.",
-  "keywords": ["framework", "laravel", "discord"],
+  "keywords": [
+    "framework",
+    "laravel",
+    "discord"
+  ],
   "license": "MIT",
   "require": {
     "php": "^8.2",
@@ -20,6 +24,20 @@
     }
   },
   "scripts": {
+    "lint": [
+      "@php scripts/php-lint.php"
+    ],
+    "format:check": [
+      "vendor/bin/pint --test"
+    ],
+    "ci": [
+      "@composer validate --strict",
+      "@composer lint",
+      "@composer format:check"
+    ],
+    "ci:build": [
+      "php laracord app:build"
+    ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
     ]
