update env example and license from template

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ APP_NAME=Hermes
 APP_ENV=development
 
 DISCORD_TOKEN=
+GUILD_ID=
+
+DB_CONNECTION=mysql
+DB_HOST=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
